<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="tab_learning_leaders">Learning Leaders</string>
    <string name="tab_skill_iq_leaders">Skill IQ Leaders</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="lorem">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio,
        quis officia rerum a ipsum maxime, quibusdam incidunt
        similique qui amet doloremque quae natus ex sunt,
        harum minus reiciendis magnam. Delectus!</string>

    <string name="hours">learning hours</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="project_submission">Project Submission</string>
    <string name="yes">Yes</string>
    <string name="sure">Are you sure ?</string>
    <string name="submission_not_successful">Submission not successful</string>
    <string name="submission_successful">Submission successful</string>
</resources>